<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading LIbrary by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit-Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="cloud_download">cloud download</string>

    <string name="check_status">Check download status</string>

    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="load_app_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="loadapp">LoadApp</string>

    <string name="download_success">Success</string>
    <string name="download_fail">Fail</string>

    <string name="download">Download</string>
    <string name="ok">OK</string>
    <string name="status">Status</string>
    <string name="file_name">File name:</string>
</resources>
