<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTintMode="add"
        android:contentDescription="@string/cloud_download"
        android:foregroundTintMode="multiply"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_cloud_download_black_48"
        app:tint="@android:color/holo_purple"
        tools:ignore="ImageContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioGlide"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/glide_image_loading_library_by_bumptech"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioLoadApp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/loadapp_current_repository_by_udacity"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioRetrofit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/retrofit_type_safe_http_client_for_android_and_java_by_square_inc"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:onClick="onLoadingButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:backColor="@color/colorPrimary"
        app:textColor="@color/white"
        app:circleColor="@color/colorAccent"
        app:fillColor="@color/colorPrimaryDark"/>

</androidx.constraintlayout.widget.ConstraintLayout>